Reverted to the origianl Igames CSS path
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@24 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/igames/template.html
+++ b/devel/themes/igames/template.html
@@ -4,7 +4,7 @@
 <title>{TITLE}</title>
 <meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
 {META}
-<link rel="stylesheet" href="themes/igamesM/style.css" />
+<link rel="stylesheet" href="themes/igames/style.css" />
 <script type="text/javascript" src="scripts.js"></script></head>
 <script language="JavaScript" type="text/JavaScript">
 <!--
