Added breadcrumbs and lastalb to the section on changing front page content
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@43 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/README.html
+++ b/devel/README.html
@@ -141,6 +141,8 @@ li {
   <li>'<b>topn</b>': most viewed</li>
   <li>'<b>toprated</b>': top rated</li>
   <li>'<b>lastcom</b>': last comments </li>
+  <li>'<b>breadcrumb</b>': Breadcrumbs </li>
+  <li>'<b>lastalb</b>': last uploaded to Albums</li>
 </ul>
 <p></p>
 <p>The <b>,2</b> means 2 rows of thumbnails</p>
