removed double linebreaks,added util.php to admin nav
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@61 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/hardwired/template.html
+++ b/devel/themes/hardwired/template.html
@@ -8,43 +8,43 @@
 <style>
 BODY {SCROLLBAR-FACE-COLOR: #444444; SCROLLBAR-HIGHLIGHT-COLOR: #444444; SCROLLBAR-SHADOW-COLOR: #333333; SCROLLBAR-3DLIGHT-COLOR: #555555; SCROLLBAR-ARROW-COLOR:  #777777; SCROLLBAR-TRACK-COLOR: #333333; SCROLLBAR-DARKSHADOW-COLOR: #333333; }
 </style>
-{META} 
+{META}
 <link rel="stylesheet" href="themes/hardwired/style.css" />
 <script type="text/javascript" src="scripts.js"></script>
 <TABLE WIDTH=778 height="100%" BORDER=0 align="center" CELLPADDING=0 CELLSPACING=0>
-  <TR> 
-    <TD width="778" height="61" valign="middle" background="themes/hardwired/images/hw_01.gif"><div align="right"> 
+  <TR>
+    <TD width="778" height="61" valign="middle" background="themes/hardwired/images/hw_01.gif"><div align="right">
         <table width="73%" height="32" border="0" cellpadding="0" cellspacing="0">
-          <tr> 
+          <tr>
             <td width="94%" height="22" valign="bottom"><div align="right"><font color="#4C5157" size="4" face="Geneva, Arial, Helvetica, sans-serif">{GAL_NAME}</font></div></td>
             <td width="6%"><div align="right"> </div></td>
           </tr>
         </table>
       </div></TD>
   </TR>
-  <TR> 
+  <TR>
     <TD height="100%" align="center" valign="top" background="themes/hardwired/images/hw_02.gif"><table width="100%" height="100%" border="0" align="center">
-        <tr> 
-          <td valign="top"><div align="left"> 
+        <tr>
+          <td valign="top"><div align="left">
               <table width="725" border="0" align="center" cellpadding="6" cellspacing="0">
-                <tr> 
+                <tr>
                   <td height="108" valign="top"><table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
-                      <tr> 
+                      <tr>
                         <td width="53%">&nbsp;</td>
                         <td width="47%"><div align="right">{MAIN_MENU1}</div></td>
                       </tr>
                     </table>
-                    <br>
-                    {MAIN_MENU2} <br>
+                    <br />
+                    {MAIN_MENU2} <br />
                     {ADMIN_MENU} {GALLERY}</td>
                 </tr>
               </table>
-              <br>
+              <br />
             </div></td>
         </tr>
       </table></TD>
   </TR>
-  <TR> 
+  <TR>
     <TD valign="bottom"> <img src="themes/hardwired/images/hw_03.gif"></TD>
   </TR>
 </TABLE>
