--- a/devel/themes/igames/template.html
+++ b/devel/themes/igames/template.html
@@ -34,7 +34,7 @@ function MM_showHideLayers() { //v6.0
           <td background="themes/igames/images/top_panel_r1_c1.jpg">
             <h1>{GAL_NAME}</h1>
             <h3>{GAL_DESCRIPTION}</h3></td>
-          <td  background="themes/igames/images/top_panel_r1_c4.jpg"></td>
+          <td  background="themes/igames/images/top_panel_r1_c4.jpg"><img src="themes/igames/images/aladdin.gif" ></td>
           <td width="50%" background="themes/igames/images/top_panel_r1_c4.jpg" valign="center"></td>
         </tr>
       </table></td>
