--- a/devel/themes/hardwired/template.html
+++ b/devel/themes/hardwired/template.html
@@ -1,31 +1,28 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html dir="{LANG_DIR}">
-<HEAD>
-<TITLE>{TITLE}</TITLE>
-<meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
-</HEAD>
-<BODY background="themes/hardwired/images/hardwired_bak.gif" LEFTMARGIN=0 TOPMARGIN=0 MARGINWIDTH=0 MARGINHEIGHT=0>
-<style>
-BODY {SCROLLBAR-FACE-COLOR: #444444; SCROLLBAR-HIGHLIGHT-COLOR: #444444; SCROLLBAR-SHADOW-COLOR: #333333; SCROLLBAR-3DLIGHT-COLOR: #555555; SCROLLBAR-ARROW-COLOR:  #777777; SCROLLBAR-TRACK-COLOR: #333333; SCROLLBAR-DARKSHADOW-COLOR: #333333; }
-</style>
+<html dir="{lang_dir}">
+<head>
+<title>{TITLE}</title>
+<meta http-equiv="content-type" content="text/html; charset={charset}" />
 {META}
 <link rel="stylesheet" href="themes/hardwired/style.css" />
 <script type="text/javascript" src="scripts.js"></script>
-<TABLE WIDTH=778 height="100%" BORDER=0 align="center" CELLPADDING=0 CELLSPACING=0>
-  <TR>
-    <TD width="778" height="61" valign="middle" background="themes/hardwired/images/hw_01.gif"><div align="right">
+</head>
+<body>
+<table width="778" height="100%" border="0" align="center" cellpadding="0" cellspacing="0">
+  <tr>
+    <td width="778" height="61" valign="middle" align="right" background="themes/hardwired/images/hw_01.gif">
         <table width="73%" height="32" border="0" cellpadding="0" cellspacing="0">
           <tr>
-            <td width="94%" height="22" valign="bottom"><div align="right"><font color="#4C5157" size="4" face="Geneva, Arial, Helvetica, sans-serif">{GAL_NAME}</font></div></td>
-            <td width="6%"><div align="right"> </div></td>
+            <td width="94%" height="22" valign="bottom" align="right"><span class="gal_name">{GAL_NAME}</span></td>
+            <td width="6%"></td>
           </tr>
         </table>
-      </div></TD>
-  </TR>
-  <TR>
-    <TD height="100%" align="center" valign="top" background="themes/hardwired/images/hw_02.gif"><table width="100%" height="100%" border="0" align="center">
+      </td>
+  </tr>
+  <tr>
+    <td height="100%" align="center" valign="top" background="themes/hardwired/images/hw_02.gif"><table width="100%" height="100%" border="0" align="center">
         <tr>
-          <td valign="top"><div align="left">
+          <td valign="top" align="left">
               <table width="725" border="0" align="center" cellpadding="6" cellspacing="0">
                 <tr>
                   <td height="108" valign="top"><table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
@@ -40,13 +37,13 @@ BODY {SCROLLBAR-FACE-COLOR: #444444; SCROLLBAR-HIGHLIGHT-COLOR: #444444; SCROLLB
                 </tr>
               </table>
               <br />
-            </div></td>
+            </td>
         </tr>
       </table></TD>
-  </TR>
-  <TR>
-    <TD valign="bottom"> <img src="themes/hardwired/images/hw_03.gif"></TD>
-  </TR>
-</TABLE>
-</BODY>
-</HTML>
+  </tr>
+  <tr>
+    <td valign="bottom"> <img src="themes/hardwired/images/hw_03.gif"></td>
+  </tr>
+</table>
+</body>
+</html>
