--- a/devel/themes/hardwired/template.html
+++ b/devel/themes/hardwired/template.html
@@ -3,6 +3,7 @@
 <head>
 <title>{TITLE}</title>
 <meta http-equiv="content-type" content="text/html; charset={charset}" />
+<meta http-equiv="Pragma" content="no-cache" />
 {META}
 <link rel="stylesheet" href="themes/hardwired/style.css" />
 <script type="text/javascript" src="scripts.js"></script>
