--- a/stable/themes/eyeball/template.html
+++ b/stable/themes/eyeball/template.html
@@ -3,6 +3,7 @@
 <head>
 <title>{TITLE}</title>
 <meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
+<meta http-equiv="Pragma" content="no-cache" />
 {META}
 <link rel="stylesheet" href="themes/eyeball/style.css" />
 <script type="text/javascript" src="scripts.js"></script>
