--- a/stable/themes/rainy_day/template.html
+++ b/stable/themes/rainy_day/template.html
@@ -2,6 +2,7 @@
 <html dir="{LANG_DIR}">
 <title>{TITLE}</title>
 <meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
+<meta http-equiv="Pragma" content="no-cache" />
 {META}
 <link rel="stylesheet" href="themes/rainy_day/style.css" />
 <script type="text/javascript" src="scripts.js"></script>
