--- a/devel/themes/fruity/template.html
+++ b/devel/themes/fruity/template.html
@@ -17,7 +17,7 @@
     <table border="0" cellspacing="0" cellpadding="0" width="100%">
     <tr>
     <td style="background-image:url(themes/fruity/images/middle_top2.gif);background-repeat:no-repeat" width="168"><img src="themes/fruity/images/blind.gif" width="168" height="81" border="0" alt="" /></td>
-    <td style="background-color:#FFA600" align="left" valign="middle"><h1>{GAL_NAME}</h1><h3>{GAL_DESCRIPTION}</h3></td>
+    <td style="background-color:#FFA600" align="left" valign="middle"><h1>{GAL_NAME}</h1><h3>{GAL_DESCRIPTION}</h3>{LANGUAGE_SELECT_FLAGS}</td>
     </tr>
     </table>
 </td>
@@ -45,7 +45,9 @@
 </tr>
 <tr>
 <td style="background-color:#6BBE10" align="center" valign="top">
-{MAIN_MENU}
+{MAIN_MENU}<br />&nbsp;<br />
+{LANGUAGE_SELECT_LIST}<br />
+{THEME_SELECT_LIST}
 </td>
 </tr>
 </table>
