--- a/devel/themes/hardwired/template.html
+++ b/devel/themes/hardwired/template.html
@@ -28,12 +28,13 @@
                 <tr>
                   <td height="108" valign="top"><table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
                       <tr>
-                        <td width="53%">&nbsp;</td>
+                        <td width="53%">{LANGUAGE_SELECT_FLAGS}</td>
                         <td width="47%"><div align="right">{MAIN_MENU1}</div></td>
                       </tr>
                     </table>
                     <br />
                     {MAIN_MENU2} <br />
+                    {THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}<br />&nbsp;<br />
                     {ADMIN_MENU} {GALLERY}</td>
                 </tr>
               </table>
