--- a/devel/themes/project_vii/template.html
+++ b/devel/themes/project_vii/template.html
@@ -26,7 +26,18 @@ function MM_showHideLayers() { //v6.0
 //-->
 </script>
 <body>
-<div id="Menu1" style="position:absolute; width:800px; height:30px; z-index:1; left: 20px; top: 100px; visibility: hidden;">{MAIN_MENU1}</div>
+<div id="Menu1" style="position:absolute; width:800px; height:30px; z-index:1; left: 20px; top: 100px; visibility: hidden;">
+                <span class="topmenu">
+                        <table border="0" cellpadding="0" cellspacing="0">
+                                <tr>
+                                        <td>
+                                        {MAIN_MENU1}
+                                        &nbsp;{LANGUAGE_SELECT_FLAGS}
+                                        </td>
+                                </tr>
+                        </table>
+                </span>
+</div>
 <table border="0" cellpadding="0" cellspacing="0" width="100%" class="top_panel">
   <!-- fwtable fwsrc="top_panel.png" fwbase="top_panel" fwstyle="Dreamweaver" fwdocid = "742308039" fwnested="1" -->
   <tr>
@@ -57,6 +68,7 @@ background-position : right;
     <td align="center">{ADMIN_MENU} {GALLERY} </td>
   </tr>
 </table>
+{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}
 <p>&nbsp;</p>
 </body>
 </html>
