--- a/devel/themes/water_drop/template.html
+++ b/devel/themes/water_drop/template.html
@@ -11,26 +11,28 @@
 <body>
 <table width="100%" height="100%" border="0" cellpadding="20" cellspacing="20">
 <tr>
-	<td valign="top" bordercolor="#666666" bgcolor="#FFFFFF" style="border: 1px solid #ccd7e0; background-color: #fff;">
-		<table width="100%" border="0" cellspacing="0" cellpadding="0">
-	       	<tr>
-				<td width="100%" align="center">
-					<h1>{GAL_NAME}</h1>
-					<h3>{GAL_DESCRIPTION}</h3><br />
-					{MAIN_MENU}
-				</td>
-			</tr>
-		</table>
-		<img src="images/spacer.gif" width="1" height="15" /><br />
-		<table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
-			<tr>
-				<td align="center" valign="top">
-					{ADMIN_MENU}
-					{GALLERY}
-				</td>
-			</tr>
-		</table>
-	</td>
+        <td valign="top" bordercolor="#666666" bgcolor="#FFFFFF" style="border: 1px solid #ccd7e0; background-color: #fff;">
+                <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                       <tr>
+                                <td width="100%" align="center">
+                                        <h1>{GAL_NAME}</h1>
+                                        <h3>{GAL_DESCRIPTION}</h3><br />
+                                        {MAIN_MENU}<br />
+                                        {LANGUAGE_SELECT_FLAGS}&nbsp;{LANGUAGE_SELECT_LIST}&nbsp;
+                                        {THEME_SELECT_LIST}
+                                </td>
+                        </tr>
+                </table>
+                <img src="images/spacer.gif" width="1" height="15" /><br />
+                <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
+                        <tr>
+                                <td align="center" valign="top">
+                                        {ADMIN_MENU}
+                                        {GALLERY}
+                                </td>
+                        </tr>
+                </table>
+        </td>
 </tr>
 </table>
 </body>
