--- a/devel/themes/igames/template.html
+++ b/devel/themes/igames/template.html
@@ -6,7 +6,11 @@
 <meta http-equiv="Pragma" content="no-cache" />
 {META}
 <link rel="stylesheet" href="themes/igames/style.css" />
-<script type="text/javascript" src="scripts.js"></script></head>
+<script type="text/javascript" src="scripts.js"></script>
+<!--
+$Id$
+-->
+</head>
 <script language="JavaScript" type="text/JavaScript">
 <!--
 function MM_findObj(n, d) { //v4.01
