--- a/devel/themes/styleguide/template.html
+++ b/devel/themes/styleguide/template.html
@@ -11,9 +11,12 @@
 <script type="text/javascript" src="scripts.js"></script>
 <script type="text/javascript" src="themes/styleguide/domLib.js"></script>
 <script type="text/javascript" src="themes/styleguide/domTT.js"></script>
-<script>
+<script type="text/javascript">
   var domTT_classPrefix = 'domTTOverlib';
 </script>
+<!--
+$Id$
+-->
 </head>
 <body>
 
