fixed admin menu buttons for non-english languages
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@660 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/eyeball/template.html
+++ b/devel/themes/eyeball/template.html
@@ -46,7 +46,7 @@ $Id$
   <tr>
    <td><table border="0" cellpadding="0" cellspacing="0" width="100%">
           <tr>
-           <td width="49%" background="themes/eyeball/images/top_background_r1_c1.gif">{THEME_SELECT_LIST}</td>
+           <td width="49%" background="themes/eyeball/images/top_background_r1_c1.gif"></td>
            <td width="2%"><table border="0" cellpadding="0" cellspacing="0" wisth="100%">
                   <tr>
                    <td><table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -67,7 +67,7 @@ $Id$
                         </table></td>
                   </tr>
                 </table></td>
-           <td width="49%" background="themes/eyeball/images/top_background_r1_c7.gif">{LANGUAGE_SELECT_LIST}</td>
+           <td width="49%" background="themes/eyeball/images/top_background_r1_c7.gif"></td>
           </tr>
         </table></td>
   </tr>
@@ -82,5 +82,6 @@ $Id$
                 </td>
         </tr>
 </table>
+{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}
 </body>
 </html>
