--- a/devel/themes/fruity/template.html
+++ b/devel/themes/fruity/template.html
@@ -48,9 +48,7 @@ $Id$
 </tr>
 <tr>
 <td style="background-color:#6BBE10" align="center" valign="top">
-{MAIN_MENU}<br />&nbsp;<br />
-{LANGUAGE_SELECT_LIST}<br />
-{THEME_SELECT_LIST}
+{MAIN_MENU}
 </td>
 </tr>
 </table>
@@ -58,6 +56,8 @@ $Id$
 <td id="m32" style="background-image:url(themes/fruity/images/grey_horizontal.gif);background-repeat:repeat-y" ></td>
 <td id="m33" valign="top">
 {GALLERY}
+{LANGUAGE_SELECT_LIST}&nbsp;
+{THEME_SELECT_LIST}
 </td>
 </tr>
 <tr>
