--- a/devel/themes/igames/template.html
+++ b/devel/themes/igames/template.html
@@ -51,7 +51,7 @@ function MM_showHideLayers() { //v6.0
             <h1>{GAL_NAME}</h1>
             <h3>{GAL_DESCRIPTION}</h3></td>
           <td  background="themes/igames/images/top_panel_r1_c4.jpg"><img src="themes/igames/images/aladdin.gif" ></td>
-          <td width="50%" background="themes/igames/images/top_panel_r1_c4.jpg" valign="center" align="right">{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}&nbsp;</td>
+          <td width="50%" background="themes/igames/images/top_panel_r1_c4.jpg" valign="center" align="right">{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}<br />{LANGUAGE_SELECT_FLAGS}</td>
         </tr>
       </table></td>
   </tr>
