--- a/devel/themes/mac_ox_x/template.html
+++ b/devel/themes/mac_ox_x/template.html
@@ -36,8 +36,7 @@ function MM_showHideLayers() { //v6.0
                                 <tr>
                                         <td>
                                         {MAIN_MENU1}&nbsp;
-                                        {LANGUAGE_SELECT_FLAGS}&nbsp;
-                                        {LANGUAGE_SELECT_LIST}
+                                        {LANGUAGE_SELECT_FLAGS}
                                         </td>
                                 </tr>
                         </table>
@@ -75,7 +74,7 @@ function MM_showHideLayers() { //v6.0
     <td align="center">{ADMIN_MENU} {GALLERY} </td>
   </tr>
 </table>
-{THEME_SELECT_LIST}
+{THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}
 <p>&nbsp;</p>
 </body>
 </html>
