--- a/devel/themes/hardwired/template.html
+++ b/devel/themes/hardwired/template.html
@@ -29,15 +29,9 @@ $Id$
           <td valign="top" align="left">
               <table width="725" border="0" align="center" cellpadding="6" cellspacing="0">
                 <tr>
-                  <td height="108" valign="top"><table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
-                      <tr>
-                        <td width="53%">{LANGUAGE_SELECT_FLAGS}</td>
-                        <td width="47%"><div align="right">{MAIN_MENU1}</div></td>
-                      </tr>
-                    </table>
-                    <br />
+                  <td height="108" valign="top"><div align="right">{MAIN_MENU1}</div><br />
                     {MAIN_MENU2} <br />
-                    {THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}<br />&nbsp;<br />
+                    {THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}{LANGUAGE_SELECT_FLAGS}<br />&nbsp;<br />
                     {ADMIN_MENU} {GALLERY}</td>
                 </tr>
               </table>
