--- a/devel/themes/rainy_day/template.html
+++ b/devel/themes/rainy_day/template.html
@@ -26,7 +26,7 @@ $Id$
    <td><table border="0" cellpadding="0" cellspacing="0" width="100%">
           <tr>
            <td><img name="template_r2_c1" src="themes/rainy_day/images/template_r2_c1.gif" width="18" height="57" border="0" id="template_r2_c1" alt="" /></td>
-              <td width="100%" background="themes/rainy_day/images/template_r2_c2.gif"><table border="0" width="100%" cellspacing="5" cellpadding="0"><tr><td><h1>&nbsp;{GAL_NAME}</h1></td><td align="left">{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}</td></tr></table></td>
+              <td width="100%" background="themes/rainy_day/images/template_r2_c2.gif"><table border="0" width="100%" cellspacing="5" cellpadding="0"><tr><td><h1>&nbsp;{GAL_NAME}</h1></td><td align="left">{THEME_SELECT_LIST}{LANGUAGE_SELECT_FLAGS}</td></tr></table></td>
            <td><img name="template_r2_c10" src="themes/rainy_day/images/template_r2_c10.gif" width="16" height="57" border="0" id="template_r2_c10" alt="" /></td>
           </tr>
         </table></td>
@@ -48,7 +48,7 @@ $Id$
                 <span class="topmenu">
                         <table border="0" cellpadding="0" cellspacing="0">
                                 <tr>
-              <td>{LANGUAGE_SELECT_FLAGS}</td>{MAIN_MENU2}
+              <td>{LANGUAGE_SELECT_LIST}</td>{MAIN_MENU2}
                                 </tr>
                         </table>
                 </span>
