changed two occurances of 'themes/default' to 'themes/classic'
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@695 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/classic/template.html
+++ b/devel/themes/classic/template.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
 <meta http-equiv="Pragma" content="no-cache" />
 {META}
-<link rel="stylesheet" href="themes/default/style.css" />
+<link rel="stylesheet" href="themes/classic/style.css" />
 <script type="text/javascript" src="scripts.js"></script>
 <!--
 $Id$
@@ -17,7 +17,7 @@ $Id$
         <td valign="top" bordercolor="#666666" bgcolor="#FFFFFF" style="border: 1px solid;">
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                        <tr>
-                                <td><a href="index.php"><img src="themes/default/images/site_logo.png" alt="" border="0" /><br /></a></td>
+                                <td><a href="index.php"><img src="themes/classic/images/site_logo.png" alt="" border="0" /><br /></a></td>
                                 <td width="100%" align="center">
                                         <h1>{GAL_NAME}</h1>
                                         <h3>{GAL_DESCRIPTION}</h3><br />
