moved language by flag selection to bottom for space reasons
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@701 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/project_vii/template.html
+++ b/devel/themes/project_vii/template.html
@@ -36,7 +36,6 @@ function MM_showHideLayers() { //v6.0
                                 <tr>
                                         <td>
                                         {MAIN_MENU1}
-                                        &nbsp;{LANGUAGE_SELECT_FLAGS}
                                         </td>
                                 </tr>
                         </table>
@@ -72,7 +71,7 @@ background-position : right;
     <td align="center">{ADMIN_MENU} {GALLERY} </td>
   </tr>
 </table>
-{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}
+{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}{LANGUAGE_SELECT_FLAGS}
 <p>&nbsp;</p>
 </body>
 </html>
