--- a/devel/themes/mac_ox_x/template.html
+++ b/devel/themes/mac_ox_x/template.html
@@ -35,8 +35,7 @@ function MM_showHideLayers() { //v6.0
                         <table border="0" cellpadding="0" cellspacing="0">
                                 <tr>
                                         <td>
-                                        {MAIN_MENU1}&nbsp;
-                                        {LANGUAGE_SELECT_FLAGS}
+                                        {MAIN_MENU1}
                                         </td>
                                 </tr>
                         </table>
@@ -74,7 +73,7 @@ function MM_showHideLayers() { //v6.0
     <td align="center">{ADMIN_MENU} {GALLERY} </td>
   </tr>
 </table>
-{THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}
+{THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}{LANGUAGE_SELECT_FLAGS}
 <p>&nbsp;</p>
 </body>
 </html>
