removed reference to aladdin.gif
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@791 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/igames/template.html
+++ b/devel/themes/igames/template.html
@@ -36,7 +36,6 @@ function MM_showHideLayers() { //v6.0
                                 <tr>
                                         <td>
                                         {MAIN_MENU1}
-                                        &nbsp;{LANGUAGE_SELECT_FLAGS}
                                         </td>
                                 </tr>
                         </table>
@@ -50,8 +49,8 @@ function MM_showHideLayers() { //v6.0
           <td background="themes/igames/images/top_panel_r1_c1.jpg">
             <h1>{GAL_NAME}</h1>
             <h3>{GAL_DESCRIPTION}</h3></td>
-          <td  background="themes/igames/images/top_panel_r1_c4.jpg"><img src="themes/igames/images/aladdin.gif" ></td>
-          <td width="50%" background="themes/igames/images/top_panel_r1_c4.jpg" valign="center" align="right">{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}<br />{LANGUAGE_SELECT_FLAGS}</td>
+            <td background="themes/igames/images/top_panel_r1_c4.jpg" ><img src="../../images/spacer.gif" width="1" height="70" border="0" alt="" /></td>
+          <td width="50%" background="themes/igames/images/top_panel_r1_c4.jpg" valign="center" align="right">{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}&nbsp;<br />{LANGUAGE_SELECT_FLAGS}&nbsp;</td>
         </tr>
       </table></td>
   </tr>
