Centered admin menu
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@798 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/classic/template.html
+++ b/devel/themes/classic/template.html
@@ -27,9 +27,9 @@ $Id$
                 </table>
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                   <tr>
-                  <td>{LANGUAGE_SELECT_FLAGS}</td>
-                  <td>{LANGUAGE_SELECT_LIST}</td>
-                  <td>{THEME_SELECT_LIST}</td>
+                  <td align="center" valign="top">{LANGUAGE_SELECT_FLAGS}</td></tr>
+                 <tr> <td align="center" valign="top">{LANGUAGE_SELECT_LIST}
+                  {THEME_SELECT_LIST}</td>
                   </tr>
                 </table>
                 <img src="images/spacer.gif" width="1" height="15" /><br />
