--- a/devel/themes/eyeball/template.html
+++ b/devel/themes/eyeball/template.html
@@ -81,7 +81,10 @@ $Id$
                         {GALLERY}
                 </td>
         </tr>
+		<tr>
+                <td align="center" valign="top">{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}</td>
+        </tr>
 </table>
-{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}
+
 </body>
 </html>
