--- a/devel/themes/fruity/template.html
+++ b/devel/themes/fruity/template.html
@@ -1,90 +1,93 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html dir="{LANG_DIR}">
-<head>
 <title>{TITLE}</title>
 <meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
 <meta http-equiv="Pragma" content="no-cache" />
 {META}
-<link rel="stylesheet" href="themes/fruity/style.css" />
+<link rel="stylesheet" href="themes/rainy_day/style.css" />
 <script type="text/javascript" src="scripts.js"></script>
 <!--
 $Id$
 -->
 </head>
-<body bgcolor="#FFFFFF" text="#000000">
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td style="background-color:#FFFF00" id="m11">&nbsp;</td>
-<td style="background-color:#FFFF00" id="m12">&nbsp;</td>
-<td id="m13">
-    <table border="0" cellspacing="0" cellpadding="0" width="100%">
-    <tr>
-    <td style="background-image:url(themes/fruity/images/middle_top2.gif);background-repeat:no-repeat" width="168"><img src="themes/fruity/images/blind.gif" width="168" height="81" border="0" alt="" /></td>
-    <td style="background-color:#FFA600" align="left" valign="middle"><h1>{GAL_NAME}</h1><h3>{GAL_DESCRIPTION}</h3>{LANGUAGE_SELECT_FLAGS}</td>
-    </tr>
-    </table>
-</td>
-</tr>
-<tr>
-<td style="background-color:#FFFF00" id="m21">&nbsp;</td>
-<td id="m22" style="background-image:url(themes/fruity/images/yellow_corner.gif);background-repeat:no-repeat" width="25"><img src="themes/fruity/images/blind.gif" width="25" height="45" border="0" alt="" /></td>
-<td id="m23"  style="background-image:url(themes/fruity/images/grey_vertical.gif);background-repeat:repeat-x" align="center" valign="middle">
-{ADMIN_MENU}
-</td>
-</tr>
-<tr>
-<td id="m31" valign="top" style="background-color:#6BBE10">
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td >
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td style="background-color:#6BBE10;background-image:url(themes/fruity/images/main_under_left.gif);background-repeat:no-repeat" width="24"></td>
-<td style="background-color:#6BBE10;background-image:url(themes/fruity/images/main_under_middle.gif);background-repeat:repeat-x"><img src="themes/fruity/images/blind.gif" width="1" height="22" border="0" alt="" />&nbsp;</td>
-<td style="background-color:#6BBE10;background-image:url(themes/fruity/images/main_under_right.gif);background-repeat:no-repeat" width="98"></td>
-</tr>
-</table>
-</td>
-</tr>
-<tr>
-<td style="background-color:#6BBE10" align="center" valign="top">
-{MAIN_MENU}
-</td>
-</tr>
-</table>
-</td>
-<td id="m32" style="background-image:url(themes/fruity/images/grey_horizontal.gif);background-repeat:repeat-y" ></td>
-<td id="m33" valign="top">
-{GALLERY}
-{LANGUAGE_SELECT_LIST}&nbsp;
-{THEME_SELECT_LIST}
-</td>
-</tr>
-<tr>
-<td id="m41">
-  <table border="0" cellspacing="0" cellpadding="0" width="100%">
+<body>
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
+<!-- fwtable fwsrc="template.png" fwbase="template.gif" fwstyle="Generic" fwdocid = "742308039" fwnested="1" -->
   <tr>
-  <td style="background-color:#6BBE10">&nbsp;</td>
-  <td style="background-image:url(themes/fruity/images/lb_left.gif);background-repeat:no-repeat" width="126"><img src="themes/fruity/images/blind.gif" width="1" height="55" border="0" alt="" />&nbsp;</td>
+   <td><table border="0" cellpadding="0" cellspacing="0" width="100%">
+          <tr>
+           <td><img name="template_r1_c1" src="themes/rainy_day/images/template_r1_c1.gif" width="42" height="55" border="0" id="template_r1_c1" alt="" /></td>
+              <td width="100%" background="themes/rainy_day/images/template_r1_c5.gif">{MAIN_MENU1}</td>
+           <td><img name="template_r1_c6" src="themes/rainy_day/images/template_r1_c6.gif" width="42" height="55" border="0" id="template_r1_c6" alt="" /></td>
+          </tr>
+        </table></td>
   </tr>
-  </table>
-</td>
-<td id="m42" style="background-image:url(themes/fruity/images/lb_right.gif);background-repeat:no-repeat"></td>
-<td id="m43">
-</td>
-</tr>
-<tr>
-<td id="m51">
-  <table border="0" cellspacing="0" cellpadding="0" width="100%">
   <tr>
-  <td style="background-image:url(themes/fruity/images/left_bottom_left.gif);background-repeat:repeat-x">&nbsp;</td>
-  <td style="background-image:url(themes/fruity/images/lb_bottom.gif);background-repeat:no-repeat" width="126"><img src="themes/fruity/images/blind.gif" width="1" height="6" border="0" alt="" />&nbsp;</td>
+   <td><table border="0" cellpadding="0" cellspacing="0" width="100%">
+          <tr>
+           <td><img name="template_r2_c1" src="themes/rainy_day/images/template_r2_c1.gif" width="18" height="57" border="0" id="template_r2_c1" alt="" /></td>
+              <td width="100%" background="themes/rainy_day/images/template_r2_c2.gif"><table border="0" width="100%" cellspacing="5" cellpadding="0"><tr><td><h1>&nbsp;{GAL_NAME}</h1></td><td align="left">{LANGUAGE_SELECT_FLAGS}<br>{THEME_SELECT_LIST}</td></tr></table></td>
+           <td><img name="template_r2_c10" src="themes/rainy_day/images/template_r2_c10.gif" width="16" height="57" border="0" id="template_r2_c10" alt="" /></td>
+          </tr>
+        </table></td>
   </tr>
-  </table>
-</td>
-<td id="m52"></td>
-<td id="m53"></td>
-</tr>
+  <tr>
+   <td><table border="0" cellpadding="0" cellspacing="0" width="100%">
+          <tr>
+           <td><img name="template_r3_c1" src="themes/rainy_day/images/template_r3_c1.gif" width="560" height="67" border="0" id="template_r3_c1" alt="" /></td>
+              <td width="100%" background="themes/rainy_day/images/template_r3_c7.gif">&nbsp;</td>
+           <td><img name="template_r3_c9" src="themes/rainy_day/images/template_r3_c9.gif" width="42" height="67" border="0" id="template_r3_c9" alt="" /></td>
+          </tr>
+        </table></td>
+  </tr>
+  <tr>
+   <td><table border="0" cellpadding="0" cellspacing="0" width="100%">
+          <tr>
+           <td background="themes/rainy_day/images/template_r4_c1.gif"><img name="template_r4_c1" src="themes/rainy_day/images/template_r4_c1.gif" width="42" height="26" border="0" id="template_r4_c1" alt="" /></td>
+              <td width="100%" align="right" background="themes/rainy_day/images/template_r4_c3.gif">
+                <span class="topmenu">
+                        <table border="0" cellpadding="0" cellspacing="0">
+                                <tr>
+              <td>{LANGUAGE_SELECT_LIST}</td>{MAIN_MENU2}
+                                </tr>
+                        </table>
+                </span>
+              </td>
+           <td background="themes/rainy_day/images/template_r4_c9.gif"><img name="template_r4_c9" src="themes/rainy_day/images/template_r4_c9.gif" width="42" height="26" border="0" id="template_r4_c9" alt="" /></td>
+          </tr>
+        </table></td>
+  </tr>
+  <tr>
+   <td><table border="0" cellpadding="0" cellspacing="0" width="100%">
+          <tr>
+           <td><img name="template_r5_c1" src="themes/rainy_day/images/template_r5_c1.gif" width="42" height="20" border="0" id="template_r5_c1" alt="" /></td>
+           <td><img name="template_r5_c3" src="themes/rainy_day/images/template_r5_c3.gif" width="14" height="20" border="0" id="template_r5_c3" alt="" /></td>
+              <td width="100%" background="themes/rainy_day/images/template_r5_c4.gif">&nbsp;</td>
+           <td><img name="template_r5_c8" src="themes/rainy_day/images/template_r5_c8.gif" width="14" height="20" border="0" id="template_r5_c8" alt="" /></td>
+           <td><img name="template_r5_c9" src="themes/rainy_day/images/template_r5_c9.gif" width="42" height="20" border="0" id="template_r5_c9" alt="" /></td>
+          </tr>
+        </table></td>
+  </tr>
+  <tr>
+   <td><table border="0" cellpadding="0" cellspacing="0" width="100%">
+          <tr>
+           <td background="themes/rainy_day/images/template_r6_c1.gif"><img name="template_r6_c1" src="themes/rainy_day/images/template_r6_c1.gif" width="42" height="328" border="0" id="template_r6_c1" alt="" /></td>
+              <td width="100%" align="center" background="themes/rainy_day/images/template_r6_c3.gif" style="padding-left: 10px; padding-right: 10px;">{ADMIN_MENU}
+            {GALLERY} </td><td background="themes/rainy_day/images/template_r6_c9.gif"><img name="template_r6_c9" src="themes/rainy_day/images/template_r6_c9.gif" width="42" height="328" border="0" id="template_r6_c9" alt="" /></td>
+          </tr>
+        </table></td>
+  </tr>
+  <tr>
+   <td><table border="0" cellpadding="0" cellspacing="0" width="100%">
+          <tr>
+           <td><img name="template_r7_c1" src="themes/rainy_day/images/template_r7_c1.gif" width="42" height="47" border="0" id="template_r7_c1" alt="" /></td>
+           <td><img name="template_r7_c3" src="themes/rainy_day/images/template_r7_c3.gif" width="208" height="47" border="0" id="template_r7_c3" alt="" /></td>
+              <td width="100%" background="themes/rainy_day/images/template_r7_c5.gif">&nbsp;</td>
+           <td><img name="template_r7_c6" src="themes/rainy_day/images/template_r7_c6.gif" width="208" height="47" border="0" id="template_r7_c6" alt="" /></td>
+           <td><img name="template_r7_c9" src="themes/rainy_day/images/template_r7_c9.gif" width="42" height="47" border="0" id="template_r7_c9" alt="" /></td>
+          </tr>
+        </table></td>
+  </tr>
 </table>
 </body>
 </html>
