--- a/devel/themes/water_drop/template.html
+++ b/devel/themes/water_drop/template.html
@@ -21,7 +21,7 @@ $Id$
                                         <h1>{GAL_NAME}</h1>
                                         <h3>{GAL_DESCRIPTION}</h3><br />
                                         {MAIN_MENU}<br />
-                                        {LANGUAGE_SELECT_FLAGS}&nbsp;{LANGUAGE_SELECT_LIST}&nbsp;
+                                        {LANGUAGE_SELECT_FLAGS}<br>{LANGUAGE_SELECT_LIST}&nbsp;
                                         {THEME_SELECT_LIST}
                                 </td>
                         </tr>
