--- a/devel/themes/mac_ox_x/template.html
+++ b/devel/themes/mac_ox_x/template.html
@@ -72,8 +72,11 @@ function MM_showHideLayers() { //v6.0
   <tr>
     <td align="center">{ADMIN_MENU} {GALLERY} </td>
   </tr>
+  <tr>
+    <td align="center">{THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}{LANGUAGE_SELECT_FLAGS}</td>
+  </tr>
 </table>
-{THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}{LANGUAGE_SELECT_FLAGS}
+
 <p>&nbsp;</p>
 </body>
 </html>
