--- a/devel/themes/project_vii/template.html
+++ b/devel/themes/project_vii/template.html
@@ -70,8 +70,11 @@ background-position : right;
   <tr>
     <td align="center">{ADMIN_MENU} {GALLERY} </td>
   </tr>
+  <tr>
+    <td align="center">{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_FLAGS}</td>
+  </tr>
 </table>
-{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}{LANGUAGE_SELECT_FLAGS}
+
 <p>&nbsp;</p>
 </body>
 </html>
