Centered admin menu
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@799 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/hardwired/template.html
+++ b/devel/themes/hardwired/template.html
@@ -31,7 +31,7 @@ $Id$
                 <tr>
                   <td height="108" valign="top"><div align="right">{MAIN_MENU1}</div><br />
                     {MAIN_MENU2} <br />
-                    {THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}{LANGUAGE_SELECT_FLAGS}<br />&nbsp;<br />
+                    <div align="center">{LANGUAGE_SELECT_FLAGS}<br>{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}</div><br />
                     {ADMIN_MENU} {GALLERY}</td>
                 </tr>
               </table>
