--- a/devel/themes/rainy_day/template.html
+++ b/devel/themes/rainy_day/template.html
@@ -25,9 +25,9 @@ $Id$
   <tr>
    <td><table border="0" cellpadding="0" cellspacing="0" width="100%">
           <tr>
-           <td><img name="template_r2_c1" src="themes/rainy_day/images/template_r2_c1.gif" width="18" height="57" border="0" id="template_r2_c1" alt="" /></td>
-              <td width="100%" background="themes/rainy_day/images/template_r2_c2.gif"><table border="0" width="100%" cellspacing="5" cellpadding="0"><tr><td><h1>&nbsp;{GAL_NAME}</h1></td><td align="left">{LANGUAGE_SELECT_FLAGS}<br>{THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}</td></tr></table></td>
-           <td><img name="template_r2_c10" src="themes/rainy_day/images/template_r2_c10.gif" width="16" height="57" border="0" id="template_r2_c10" alt="" /></td>
+           <td style="background-image:url(themes/rainy_day/images/template_r2_c1.gif);background-repeat:repeat-y"><img  src="images/spacer.gif" width="18" height="57" border="0" alt="" /></td>
+              <td width="100%" background="themes/rainy_day/images/template_r2_c2.gif"><table border="0" width="100%" cellspacing="5" cellpadding="0"><tr><td><h1>&nbsp;{GAL_NAME}</h1></td><td align="left">{LANGUAGE_SELECT_FLAGS}<br />{THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}</td></tr></table></td>
+           <td style="background-image:url(themes/rainy_day/images/template_r2_c10.gif);background-repeat:repeat-y"><img src="images/spacer.gif" width="16" height="57" border="0" alt="" /></td>
           </tr>
         </table></td>
   </tr>
