--- a/devel/themes/igames/template.html
+++ b/devel/themes/igames/template.html
@@ -50,7 +50,7 @@ function MM_showHideLayers() { //v6.0
             <h1>{GAL_NAME}</h1>
             <h3>{GAL_DESCRIPTION}</h3></td>
             <td background="themes/igames/images/top_panel_r1_c4.jpg" ><img src="../../images/spacer.gif" width="1" height="70" border="0" alt="" /></td>
-          <td width="50%" background="themes/igames/images/top_panel_r1_c4.jpg" valign="center" align="right">{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}&nbsp;<br />{LANGUAGE_SELECT_FLAGS}&nbsp;</td>
+          <td width="50%" background="themes/igames/images/top_panel_r1_c4.jpg" valign="center" align="right">{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}&nbsp;</td>
         </tr>
       </table></td>
   </tr>
@@ -72,5 +72,6 @@ background-position : right;
   </tr>
 </table>
 <p>&nbsp;</p>
+{LANGUAGE_SELECT_FLAGS}
 </body>
 </html>
