--- a/devel/themes/fruity/template.html
+++ b/devel/themes/fruity/template.html
@@ -20,7 +20,7 @@ $Id$
     <table border="0" cellspacing="0" cellpadding="0" width="100%">
     <tr>
     <td style="background-image:url(themes/fruity/images/middle_top2.gif);background-repeat:no-repeat" width="168"><img src="themes/fruity/images/blind.gif" width="168" height="81" border="0" alt="" /></td>
-    <td style="background-color:#FFA600" align="left" valign="middle"><h1>{GAL_NAME}</h1><h3>{GAL_DESCRIPTION}</h3>{LANGUAGE_SELECT_FLAGS}</td>
+    <td style="background-color:#FFA600" align="left" valign="middle"><h1>{GAL_NAME}</h1><h3>{GAL_DESCRIPTION}</h3></td>
     </tr>
     </table>
 </td>
@@ -86,5 +86,7 @@ $Id$
 <td id="m53"></td>
 </tr>
 </table>
+<br />
+<div align="center">{LANGUAGE_SELECT_FLAGS}</div>
 </body>
 </html>
