--- a/stable/themes/hardwired/template.html
+++ b/stable/themes/hardwired/template.html
@@ -31,7 +31,7 @@ $Id$
                 <tr>
                   <td height="108" valign="top"><div align="right">{MAIN_MENU1}</div><br />
                     {MAIN_MENU2} <br />
-                    <div align="center">{LANGUAGE_SELECT_FLAGS}<br>{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}</div><br />
+                    <div align="center">{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}</div><br />
                     {ADMIN_MENU} {GALLERY}</td>
                 </tr>
               </table>
@@ -44,5 +44,7 @@ $Id$
     <td valign="bottom"> <img src="themes/hardwired/images/hw_03.gif"></td>
   </tr>
 </table>
+<br />
+<div align="center">{LANGUAGE_SELECT_FLAGS}</div>
 </body>
 </html>
