--- a/devel/themes/rainy_day/template.html
+++ b/devel/themes/rainy_day/template.html
@@ -26,7 +26,7 @@ $Id$
    <td><table border="0" cellpadding="0" cellspacing="0" width="100%">
           <tr>
            <td style="background-image:url(themes/rainy_day/images/template_r2_c1.gif);background-repeat:repeat-y"><img  src="images/spacer.gif" width="18" height="57" border="0" alt="" /></td>
-              <td width="100%" background="themes/rainy_day/images/template_r2_c2.gif"><table border="0" width="100%" cellspacing="5" cellpadding="0"><tr><td><h1>&nbsp;{GAL_NAME}</h1></td><td align="left">{LANGUAGE_SELECT_FLAGS}<br />{THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}</td></tr></table></td>
+              <td width="100%" background="themes/rainy_day/images/template_r2_c2.gif"><table border="0" width="100%" cellspacing="5" cellpadding="0"><tr><td><h1>&nbsp;{GAL_NAME}</h1></td><td align="left">{THEME_SELECT_LIST}{LANGUAGE_SELECT_LIST}</td></tr></table></td>
            <td style="background-image:url(themes/rainy_day/images/template_r2_c10.gif);background-repeat:repeat-y"><img src="images/spacer.gif" width="16" height="57" border="0" alt="" /></td>
           </tr>
         </table></td>
@@ -89,5 +89,7 @@ $Id$
         </table></td>
   </tr>
 </table>
+<br />
+<div align="center">{LANGUAGE_SELECT_FLAGS}</div>
 </body>
 </html>
