added alt attribute to <img>-tags for better xhtml compliance removed height attribute for <table>,<tr>,<td> for standards compliance
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1299 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/hardwired/template.html
+++ b/devel/themes/hardwired/template.html
@@ -12,7 +12,7 @@ $Id$
 -->
 </head>
 <body>
-<table width="778" height="100%" border="0" align="center" cellpadding="0" cellspacing="0">
+<table width="778" border="0" align="center" cellpadding="0" cellspacing="0">
   <tr>
     <td width="778" height="61" valign="middle" align="right" background="themes/hardwired/images/hw_01.gif">
         <table width="73%" height="32" border="0" cellpadding="0" cellspacing="0">
@@ -24,7 +24,7 @@ $Id$
       </td>
   </tr>
   <tr>
-    <td height="100%" align="center" valign="top" background="themes/hardwired/images/hw_02.gif"><table width="100%" height="100%" border="0" align="center">
+    <td align="center" valign="top" background="themes/hardwired/images/hw_02.gif"><table width="100%" border="0" align="center">
         <tr>
           <td valign="top" align="left">
               <table width="725" border="0" align="center" cellpadding="6" cellspacing="0">
