--- a/devel/themes/classic/template.html
+++ b/devel/themes/classic/template.html
@@ -12,12 +12,12 @@ $Id$
 -->
 </head>
 <body>
-<table width="100%" height="100%" border="0" cellpadding="20" cellspacing="20" bgcolor="#CCCCCC">
+<table width="100%" border="0" cellpadding="20" cellspacing="20" bgcolor="#CCCCCC">
 <tr>
         <td valign="top" bordercolor="#666666" bgcolor="#FFFFFF" style="border: 1px solid;">
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                        <tr>
-                                <td><a href="index.php"><img src="themes/classic/images/site_logo.png" alt="" border="0" /><br /></a></td>
+                                <td><a href="index.php"><img src="themes/classic/images/site_logo.png" alt="" border="0" alt="" /><br /></a></td>
                                 <td width="100%" align="center">
                                         <h1>{GAL_NAME}</h1>
                                         <h3>{GAL_DESCRIPTION}</h3><br />
