--- a/devel/themes/water_drop/template.html
+++ b/devel/themes/water_drop/template.html
@@ -12,7 +12,7 @@ $Id$
 -->
 </head>
 <body>
-<table width="100%" height="100%" border="0" cellpadding="20" cellspacing="20">
+<table width="100%" border="0" cellpadding="20" cellspacing="20">
 <tr>
         <td valign="top" bordercolor="#666666" bgcolor="#FFFFFF" style="border: 1px solid #ccd7e0; background-color: #fff;">
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
