removed bordercolor attrictute from <table> for better xhtml compliance
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1300 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/water_drop/template.html
+++ b/devel/themes/water_drop/template.html
@@ -7,14 +7,12 @@
 {META}
 <link rel="stylesheet" href="themes/water_drop/style.css" />
 <script type="text/javascript" src="scripts.js"></script>
-<!--
-$Id$
--->
+<!-- $Id$ -->
 </head>
 <body>
 <table width="100%" border="0" cellpadding="20" cellspacing="20">
 <tr>
-        <td valign="top" bordercolor="#666666" bgcolor="#FFFFFF" style="border: 1px solid #ccd7e0; background-color: #fff;">
+        <td valign="top" style="border: 1px solid #CCD7E0; background-color: #FFFFFF;">
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                        <tr>
                                 <td width="100%" align="center">
