--- a/devel/themes/classic/template.html
+++ b/devel/themes/classic/template.html
@@ -7,14 +7,12 @@
 {META}
 <link rel="stylesheet" href="themes/classic/style.css" />
 <script type="text/javascript" src="scripts.js"></script>
-<!--
-$Id$
--->
+<!-- $Id$ -->
 </head>
 <body>
 <table width="100%" border="0" cellpadding="20" cellspacing="20" bgcolor="#CCCCCC">
 <tr>
-        <td valign="top" bordercolor="#666666" bgcolor="#FFFFFF" style="border: 1px solid;">
+        <td valign="top" style="border: 1px solid #666666;background-color:#FFFFFF;">
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                        <tr>
                                 <td><a href="index.php"><img src="themes/classic/images/site_logo.png" alt="" border="0" alt="" /><br /></a></td>
