added alt attribute to <img>-tags for better xhtml compliance
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1304 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/styleguide/template.html
+++ b/devel/themes/styleguide/template.html
@@ -37,7 +37,7 @@ $Id$
     </tr>
 </table>
 
-<img src="images/spacer.gif" width="1" height="15" /><br />
+<img src="images/spacer.gif" width="1" height="15" alt="" /><br />
 <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
   <tr>
     <td align="center" valign="top">
