--- a/devel/themes/classic/template.html
+++ b/devel/themes/classic/template.html
@@ -30,7 +30,7 @@
                   {THEME_SELECT_LIST}</td>
                   </tr>
                 </table>
-                <img src="images/spacer.gif" width="1" height="15" /><br />
+                <img src="images/spacer.gif" width="1" height="15" alt="" /><br />
                 <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
                         <tr>
                                 <td align="center" valign="top">
