fixing body background color for standards compliance
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1358 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/classic/template.html
+++ b/devel/themes/classic/template.html
@@ -10,7 +10,7 @@
 <!-- $Id$ -->
 </head>
 <body>
-<table width="100%" border="0" cellpadding="20" cellspacing="20" bgcolor="#CCCCCC">
+<table width="100%" border="0" cellpadding="20" cellspacing="20">
 <tr>
         <td valign="top" style="border: 1px solid #666666;background-color:#FFFFFF;">
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
