--- a/devel/themes/eyeball/template.html
+++ b/devel/themes/eyeball/template.html
@@ -46,7 +46,7 @@ $Id$
    <td><table border="0" cellpadding="0" cellspacing="0" width="100%">
           <tr>
            <td width="49%" background="themes/eyeball/images/top_background_r1_c1.gif"></td>
-           <td width="2%"><table border="0" cellpadding="0" cellspacing="0" wisth="100%">
+           <td width="2%"><table border="0" cellpadding="0" cellspacing="0" width="100%">
                   <tr>
                    <td><table border="0" cellpadding="0" cellspacing="0" width="100%">
                           <tr>
@@ -71,8 +71,6 @@ $Id$
         </table></td>
   </tr>
 </table>
-</body>
-</html>
 <table width="100%" border="0" align="center" cellpadding="0" cellspacing="20">
         <tr>
                 <td align="center" valign="top">
@@ -81,7 +79,7 @@ $Id$
                         {GALLERY}
                 </td>
         </tr>
-		<tr>
+                <tr>
                 <td align="center" valign="top">{THEME_SELECT_LIST}&nbsp;{LANGUAGE_SELECT_LIST}</td>
         </tr>
 </table>
